--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -164,7 +164,7 @@
                     </div>
                     <!-- END ROUND ONE -->
                     <div class="round round-two current">
-                        <div class="round-details">Round 2<br /></div>
+                        <div class="round-details">Round 2A<br /></div>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rdb34r" target="_blank">Sophie Turner<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rdb34r" target="_blank">Hailey Bieber<span class="score">&nbsp;</span></a></li>
@@ -288,7 +288,7 @@
                     </div>
                     <!-- END ROUND THREE -->
                     <div class="round round-two current">
-                        <div class="round-details">Round 2<br /></div>
+                        <div class="round-details">Round 2B<br /></div>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="javascript:void(0);">Emma Stone<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="javascript:void(0);">Kendall Jenner<span class="score">&nbsp;</span></a></li>
