--- a/details.html
+++ b/details.html
@@ -81,7 +81,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
-                        <img id="celeb-img" class="img-fluid details-image" width="60%" style="margin: auto; display: block; border-radius: 2%;">
+                        <div>
+                            <object id="celeb-img" class="slideshow" type="text/html" data=""></object>
+                            <!-- style=";border:5px #b90f2e" -->
+                            </object>
+                        </div>
+                        <!-- <img id="celeb-img" class="img-fluid details-image" width="60%" style="margin: auto; display: block; border-radius: 2%;"> -->
                         <div style="text-align: center;">
                             <br>
                             <br>
@@ -140,6 +145,11 @@
                     </div>
                 </div>
             </div>
+            <br>
+            <!-- <div>
+                <object type="text/html" data="https://www.redditpx.com/r/emmawatson" width="100%" height="600px" style="overflow:auto;border:5px ridge #b90f2e"></object>
+                </object>
+            </div> -->
         </section>
     </main>
     <footer id="footer">
