move gallery down

--- a/details.html
+++ b/details.html
@@ -81,12 +81,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
-                        <div>
-                            <object id="celeb-img" class="slideshow" type="text/html" data=""></object>
-                            <!-- style=";border:5px #b90f2e" -->
-                            </object>
-                        </div>
-                        <!-- <img id="celeb-img" class="img-fluid details-image" width="60%" style="margin: auto; display: block; border-radius: 2%;"> -->
+                        <img id="celeb-img" class="img-fluid details-image" width="60%" style="margin: auto; display: block; border-radius: 2%;">
                         <div style="text-align: center;">
                             <br>
                             <br>
@@ -142,6 +137,14 @@
                                 <td class="info-table-d ext-link" id="battles"></td>
                             </tr>
                         </table>
+                    </div>
+                </div>
+                <br>
+                <hr>
+                <div class="row">
+                    <div>
+                        <h4>Gallery</h4>
+                        <object id="celeb-slideshow" class="slideshow" type="text/html" data=""></object>
                     </div>
                 </div>
             </div>
