add battle slideshow to compare page

--- a/compare.html
+++ b/compare.html
@@ -133,6 +133,14 @@
                             </tr>
                         </table>
                     </div>
+                    <br>
+                    <hr>
+                    <div class="row">
+                        <div>
+                            <h4>Battles</h4>
+                            <object id="battle-slideshow" class="slideshow" type="text/html" data=""></object>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
