--- a/tournaments/yogapants.html
+++ b/tournaments/yogapants.html
@@ -202,32 +202,32 @@
                     <div class="round round-three current">
                         <div class="round-details">Round 3<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2pl">Hailey Bieber<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2pl">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2pl" target="_blank">Hailey Bieber<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2pl" target="_blank">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2gr">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2gr">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2gr" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2gr" target="_blank">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2mb">Hilary Duff<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2mb">Jennifer Garner<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2mb" target="_blank">Hilary Duff<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2mb" target="_blank">Jennifer Garner<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2at">Emmy Rossum<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2at;">Bryce Dallas Howard<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2at" target="_blank">Emmy Rossum<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2at" target="_blank">Bryce Dallas Howard<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND THREE -->
                     <div class="round quarterfinals current">
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5jz" target="_blank">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5jz" target="_blank">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5fh" target="_blank">Hilary Duff<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5fh" target="_blank">Emmy Rossum<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -259,31 +259,31 @@
                     <div class="round quarterfinals current">
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5a3" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5a3" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="loser team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5nv" target="_blank">Jennifer Lopez<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rko5nv" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="round round-three current">
                         <div class="round-details">Round 3<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2vk">Emma Stone<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2vk">Jessica Biel<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2vk" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2vk" target="_blank">Jessica Biel<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2xw">Shantel VanSanten<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2xw">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2xw" target="_blank">Shantel VanSanten<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2xw" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2s6">Jennifer Lopez<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2s6">Nina Dobrev<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2s6" target="_blank">Jennifer Lopez<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2s6" target="_blank">Nina Dobrev<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2ja">Elle Fanning<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2ja">Minka Kelly<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2ja" target="_blank">Elle Fanning<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/rii2ja" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND THREE -->
